--- a/workslip.css
+++ b/workslip.css
@@ -60,7 +60,7 @@ td.dateStreet {
 
 #copyTable th {
   text-align: center;
-  padding 0 0.5em 0 0.5em;
+  padding: 0 0.5em 0 0.5em;
 }
 
 #copyTable td {
